Sizes adjusted for a responsive design

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ function prev_default(e) {
   </div>
   <!--Toncoin-->
   <div class="link-box">
-    <a href="#" onclick="prev_default(event);"><svg class="svg-fa" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+    <a href="#" onclick="prev_default(event);"><svg class="svg-fa fa-toncoin" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
         <circle cx="50" cy="50" r="50" fill="#1E90FF" />
         <path d="M34 25 L66 25 c8 2 8 4 7 12.12 L57 72.87 c-2.27 7.93 -11.54 8.93 -14 0 L27 37.124 c-1-8.12 -1-10.12 7 -12.12 Z" fill="none" stroke="#FFFFFF" stroke-width="5" /><!-- -14 units for the rounded caps-->
         <path d="M50 25 L50 78.8" fill="none" stroke="#FFFFFF" stroke-width="5" /></svg>
