--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 //Prevents a default click
 function prev_default(e) {
   e.preventDefault();
-  alert("This page currenlty does not exist!!!"+ "\nWindow width: "+ window.screen.width);
+  alert("This page currenlty does not exist!!!");
 }
 </script>
 
