--- a/index.html
+++ b/index.html
@@ -58,22 +58,24 @@ function prev_default(e) {
   <div class="link-box">
     <a href="https://www.instagram.com/droid_roar"><i class="fab fa-instagram"></i>Droid Roar</a>
   </div>
+  <!--TikTok-->
+  <div class="link-box">
+    <a href="https://www.tiktok.com/@eldroideroto"><i class="svg-fa svg-tiktok"></i>El Droide Roto</a>
+  </div>
   <!--Telegram-->
   <div class="link-box">
     <a href="https://t.me/droidroar"><i class="fab fa-telegram"></i>Droid Roar</a>
   </div>
   <!--X/Twitter-->
   <div class="link-box">
-    <a href="https://x.com/droide_roto"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-fa" style="background:black;"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="white" d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
-    El Droide Roto</a>
+    <a href="https://x.com/droide_roto"><i class="svg-fa svg-x-twitter"></i>El Droide Roto</a>
   </div>
   <div class="link-box">
-    <a href="https://x.com/droid_roar"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-fa" style="background:black;"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="white" d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
-    Droid Roar</a>
+    <a href="https://x.com/droid_roar"><i class="svg-fa svg-x-twitter"></i>Droid Roar</a>
   </div>
   <!--VK-->
   <div class="link-box">
-    <a href="#" onclick="prev_default(event);"><i class="fab fa-vk"></i>El Droide Roto</a>
+    <a href="#" onclick="prev_default(event);"><i class="fab fa-vk"></i>Droid Roar</a>
   </div>
   <!--GitHub-->
   <div class="link-box">
@@ -81,8 +83,7 @@ function prev_default(e) {
   </div>
   <!--Discord-->
   <div class="link-box">
-    <a href="#" onclick="prev_default(event);"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"class="svg-fa" style="background: blue;"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="white" d="M524.5 69.8a1.5 1.5 0 0 0 -.8-.7A485.1 485.1 0 0 0 404.1 32a1.8 1.8 0 0 0 -1.9 .9 337.5 337.5 0 0 0 -14.9 30.6 447.8 447.8 0 0 0 -134.4 0 309.5 309.5 0 0 0 -15.1-30.6 1.9 1.9 0 0 0 -1.9-.9A483.7 483.7 0 0 0 116.1 69.1a1.7 1.7 0 0 0 -.8 .7C39.1 183.7 18.2 294.7 28.4 404.4a2 2 0 0 0 .8 1.4A487.7 487.7 0 0 0 176 479.9a1.9 1.9 0 0 0 2.1-.7A348.2 348.2 0 0 0 208.1 430.4a1.9 1.9 0 0 0 -1-2.6 321.2 321.2 0 0 1 -45.9-21.9 1.9 1.9 0 0 1 -.2-3.1c3.1-2.3 6.2-4.7 9.1-7.1a1.8 1.8 0 0 1 1.9-.3c96.2 43.9 200.4 43.9 295.5 0a1.8 1.8 0 0 1 1.9 .2c2.9 2.4 6 4.9 9.1 7.2a1.9 1.9 0 0 1 -.2 3.1 301.4 301.4 0 0 1 -45.9 21.8 1.9 1.9 0 0 0 -1 2.6 391.1 391.1 0 0 0 30 48.8 1.9 1.9 0 0 0 2.1 .7A486 486 0 0 0 610.7 405.7a1.9 1.9 0 0 0 .8-1.4C623.7 277.6 590.9 167.5 524.5 69.8zM222.5 337.6c-29 0-52.8-26.6-52.8-59.2S193.1 219.1 222.5 219.1c29.7 0 53.3 26.8 52.8 59.2C275.3 311 251.9 337.6 222.5 337.6zm195.4 0c-29 0-52.8-26.6-52.8-59.2S388.4 219.1 417.9 219.1c29.7 0 53.3 26.8 52.8 59.2C470.7 311 447.5 337.6 417.9 337.6z"/></svg>
-    Droid Roar</a>
+    <a href="#" onclick="prev_default(event);"><i class="svg-fa svg-discord"></i>Droid Roar</a>
   </div>
   <!--Reddit-->
   <div class="link-box">
@@ -97,8 +98,7 @@ function prev_default(e) {
   <h2>Support this project</h2>
   <!--Patreon-->
   <div class="link-box">
-    <a href="#" onclick="prev_default(event);"><svg xmlns="http://www.w3.org/2000/svg" class="svg-fa" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M489.7 153.8c-.1-65.4-51-119-110.7-138.3C304.8-8.5 207-5 136.1 28.4C50.3 68.9 23.3 157.7 22.3 246.2C21.5 319 28.7 510.6 136.9 512c80.3 1 92.3-102.5 129.5-152.3c26.4-35.5 60.5-45.5 102.4-55.9c72-17.8 121.1-74.7 121-150z"/></svg>
-    Droid Roar</a>
+    <a href="#" onclick="prev_default(event);"><i class="svg-fa svg-patreon"></i>Droid Roar</a>
   </div>
   <!--Paypal-->
   <div class="link-box">
@@ -114,11 +114,7 @@ function prev_default(e) {
   </div>
   <!--Toncoin-->
   <div class="link-box">
-    <a href="#" onclick="prev_default(event);"><svg class="svg-fa fa-toncoin" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-        <circle cx="50" cy="50" r="50" fill="#1E90FF" />
-        <path d="M34 25 L66 25 c8 2 8 4 7 12.12 L57 72.87 c-2.27 7.93 -11.54 8.93 -14 0 L27 37.124 c-1-8.12 -1-10.12 7 -12.12 Z" fill="none" stroke="#FFFFFF" stroke-width="5" /><!-- -14 units for the rounded caps-->
-        <path d="M50 25 L50 78.8" fill="none" stroke="#FFFFFF" stroke-width="5" /></svg>
-        Wallet address</a>
+    <a href="#" onclick="prev_default(event);"><i class="svg-fa svg-toncoin"></i>Wallet address</a>
   </div>
 </div>
 
