--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <!--Styles-->
 <link rel="stylesheet" href="styles-main.css" type="text/css">
 
+<script src="https://aframe.io/releases/1.4.1/aframe.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.0.0/dist/aframe-extras.min.js"></script>
+
+<style>
+    a-scene {width: 300px; height: 400px; margin-top: -8vw; margin-bottom: -5vw;}
+</style>
 
 </head>
 <body>
@@ -25,6 +31,18 @@
 
 <h1>ZerkaLinks</h1>
 
+<a-scene embedded>
+    <a-assets>
+      <a-asset-item id="droid-roar-face" src="droid-roar-face-rotating.glb" animation-mixer></a-asset-item>
+    </a-assets>
+    
+    
+    <a-entity id="rig" position="0 0.4 3.0" rotation="-8 0 0">
+      <a-entity camera look-controls wasd-controls ></a-entity>
+    </a-entity>
+    <a-entity gltf-model="#droid-roar-face" animation-mixer></a-entity>
+    <a-sky color="#4e4ed8"></a-sky>
+</a-scene>
 
 
 <!--Social media-->
