Added Reddit link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </div>
   <!--Reddit-->
   <div class="link-box">
-    <a href="#" onclick="prev_default(event);"><i class="fab fa-reddit-alien"></i>Droid Roar</a>
+    <a href="https://www.reddit.com/r/DroidRoar/"><i class="fab fa-reddit-alien"></i>Droid Roar</a>
   </div>
 </div>
 
